tests/roles/should_fail/T23252.stderr
T23252.hs:11:1: error: [GHC-87279]
    • The kind of ‘T2’ is ill-scoped
        Inferred kind: T2 :: forall (d :: k).
                             forall k (c :: k) (a :: Proxy c) (b :: Proxy d) ->
                             SimilarKind a b -> *
      Note: Specified variables (namely: (d :: k)) always come first.
      Perhaps try this order instead:
        k
        (d :: k)
        (c :: k)
        (a :: Proxy c)
        (b :: Proxy d)
        (x :: SimilarKind a b)
    • In the data type declaration for ‘T2’

